test(sandside): #252 add unit test for new mailteemplate persistence